@@ -23,7 +23,6 @@ import java.util.Objects;
 import java.util.Optional;
 import java.util.function.Consumer;
 import java.util.function.Function;
-import java.util.stream.Collectors;
 
 import org.jetbrains.annotations.NotNull;
 import org.mybatis.dynamic.sql.BasicColumn;
@@ -143,7 +142,7 @@ public class SelectDSL<R> implements Buildable<R>, ConfigurableStatement<SelectD
     private List<QueryExpressionModel> buildModels() {
         return queryExpressions.stream()
                 .map(QueryExpressionDSL::buildModel)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     private Optional<PagingModel> buildPagingModel() {
