@@ -21,21 +21,21 @@ import java.util.Collections;
 import java.util.Objects;
 import java.util.function.Predicate;
 import java.util.function.UnaryOperator;
-import java.util.stream.Collectors;
 
 import org.mybatis.dynamic.sql.AbstractListValueCondition;
 import org.mybatis.dynamic.sql.util.StringUtilities;
 
 public class IsInCaseInsensitiveWhenPresent extends AbstractListValueCondition<String>
         implements CaseInsensitiveVisitableCondition {
-    private static final IsInCaseInsensitiveWhenPresent EMPTY = new IsInCaseInsensitiveWhenPresent(Collections.emptyList());
+    private static final IsInCaseInsensitiveWhenPresent EMPTY =
+            new IsInCaseInsensitiveWhenPresent(Collections.emptyList());
 
     public static IsInCaseInsensitiveWhenPresent empty() {
         return EMPTY;
     }
 
     protected IsInCaseInsensitiveWhenPresent(Collection<String> values) {
-        super(values.stream().filter(Objects::nonNull).collect(Collectors.toList()));
+        super(values.stream().filter(Objects::nonNull).toList());
     }
 
     @Override
@@ -45,7 +45,8 @@ public class IsInCaseInsensitiveWhenPresent extends AbstractListValueCondition<S
 
     @Override
     public IsInCaseInsensitiveWhenPresent filter(Predicate<? super String> predicate) {
-        return filterSupport(predicate, IsInCaseInsensitiveWhenPresent::new, this, IsInCaseInsensitiveWhenPresent::empty);
+        return filterSupport(predicate, IsInCaseInsensitiveWhenPresent::new, this,
+                IsInCaseInsensitiveWhenPresent::empty);
     }
 
     /**
